[metadata]
name = RollyPolly
version = 0.0.1
author = Val Tenyotkin
author_email = val@roamrobotics.com
description = A minimalistic Rollbar logger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roam-robotics/rolly
project_urls =
    Bug Tracker = https://github.com/roam-robotics/rolly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
